--- a/app/views/talks/index.html.erb
+++ b/app/views/talks/index.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'New talk', new_talk_path %>
 
 <% @talks.each do |talk| %>
-  <h2><%= talk.title %></h2>
+  <h2><%= link_to h(talk.title), talk_path(talk) %></h2>
+  <p><%= talk.created_at %> | <%= talk.user.email %></p>
   <p><%= talk.abstract %></p>
-  <p>by <%= talk.user.email %></p>
 <% end %>
