user sign status

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
   <%= formtastic_stylesheet_link_tag %>
 </head>
 <body>
+  <% if user_signed_in? %>
+    <%= current_user.email %>
+    <%= link_to 'Sign out', destroy_user_session_path %>
+  <% else %>
+    <%= link_to 'Sign in', new_user_session_path %>
+  <% end %>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
