deny edit & destroy operations for non-authors

--- a/app/views/talks/index.html.erb
+++ b/app/views/talks/index.html.erb
@@ -1,4 +1,6 @@
-<%= link_to 'New talk', new_talk_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New talk', new_talk_path %>
+<% end %>
 
 <% @talks.each do |talk| %>
   <h2><%= link_to h(talk.title), talk_path(talk) %></h2>
