--- a/app/views/attachments/_attachment.html.erb
+++ b/app/views/attachments/_attachment.html.erb
@@ -1,6 +1,9 @@
 <tr>
 	<td>
-		<span><p><%= attachment.path %></p></span>
+		<%= link_to attachment.path, root_url + attachment.path %>
+	</td>
+	<td>
+		<%= link_to attachment.path, :controller => "attachments", :action => "show" %>
 	</td>
 </tr>
 
