czyszczenie z kopii edytorowych

--- a/app/views/attachments/_attachment.html.erb
+++ b/app/views/attachments/_attachment.html.erb
@@ -3,7 +3,7 @@
 		<%= link_to attachment.path, root_url + attachment.path %>
 	</td>
 	<td>
-		<%= link_to attachment.path, :controller => "attachments", :action => "show" %>
+		<%= link_to attachment.path, :controller => "attachments", :action => "download" %>
 	</td>
 </tr>
 
