--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,14 @@
   <% else %>
     <%= link_to 'Sign in', new_user_session_path %>
   <% end %>
+  <% flash.each do |key, value| %>
+          <div class="flash <%= key %>"><%= value %></div>
+    <% end %>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
   <%= yield %>
   <%= debug(params) if Rails.env.development? %>
-<% end %>%>
 </body>
 </html>
