Drobne poprawki w wygladzie i w dodawaniu zalacznikow

--- a/app/views/attachments/_attachment.html.erb
+++ b/app/views/attachments/_attachment.html.erb
@@ -1,6 +1,4 @@
-<tr>
-	<td>
-		<%= link_to attachment.path, :controller => "attachments", :action => "download" %>
-	</td>
-</tr>
+<li>
+		<%= link_to attachment.path, download_talk_attachment_path(@talk), :action => "download" %>
+</li>
 
