--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer>
 	<nav class="round">
 		<ul>
-			<li><%= link_to "About", 'http://news.railstutorial.org' %></li>
-			<li><%= link_to "Contact", 'http://news.railstutorial.org' %></li>
-			<li><%= link_to "News", 'http://news.railstutorial.org/' %></li>
-			<li><%= link_to "Rails tutorial", 'http://www.railstutorial.org/' %></li>
+			<li><%= link_to "Sample1", 'http://news.railstutorial.org' %></li>
+			<li><%= link_to "Sample2", 'http://news.railstutorial.org' %></li>
+			<li><%= link_to "Sample3", 'http://news.railstutorial.org/' %></li>
+			<li><%= link_to "Sample4", 'http://www.railstutorial.org/' %></li>
 		</ul>
 	</nav>
 </footer>
