--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,20 @@
 	<nav class="round">
 		<ul>
 			<li><%= link_to "Home", root_path %></li>
+			<li>
+				<% if user_signed_in? %>
+						<%= link_to 'Sign out', destroy_user_session_path %>
+					<% else %>
+						<%= link_to 'Sign in', new_user_session_path %>
+				<% end %>
+				</li>
 		</ul>
+		<% if user_signed_in? %>
+		<ul>
+			<li>
+				<%= current_user.email %>
+			</li>
+		</ul>
+		<% end %>
 	</nav>
 </header>
