--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,29 +2,28 @@
 <html>
 <head>
   <title>TechTalks</title>
-  <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+    <%=render 'layouts/stylesheets' %>
   <%= formtastic_stylesheet_link_tag %>
 </head>
 <body>
-<%= render 'layouts/header' %>
+<div class="container">
+	<%= render 'layouts/header' %>
+<section class="round">
 
-  <% if user_signed_in? %>
-    <%= current_user.email %>
-    <%= link_to 'Sign out', destroy_user_session_path %>
-  <% else %>
-    <%= link_to 'Sign in', new_user_session_path %>
-  <% end %>
+
   <% flash.each do |key, value| %>
           <div class="flash <%= key %>"><%= value %></div>
     <% end %>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <!--p class="notice"><%= notice %></p-->
+  <!--p class="alert"><%= alert %></p-->
 
   <%= yield %>
+  </section>
   <%= render 'layouts/footer' %>
   <%= debug(params) if Rails.env.development? %>
+</div>
 </body>
 </html>
