--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>TechTalks</title>
-  <%= javascript_include_tag :defaults %>
+  <!--%= javascript_include_tag :defaults %-->
+  <%= javascript_include_tag 'rails', 'jquery', 'jquery-ui', 'application' %>
   <%= csrf_meta_tag %>
     <%=render 'layouts/stylesheets' %>
   <%= formtastic_stylesheet_link_tag %>
