--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -96,3 +96,14 @@ footer {
 footer nav {
   float: none;
 }
+
+.talkcontent {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #F7EDE4;
+  background-color: #F7EDE4;
+}
+
+.smallfont {
+  font-size: small;
+}
