--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -107,3 +107,24 @@ footer nav {
 .smallfont {
   font-size: small;
 }
+
+#attendants {
+  /*border-style: solid;*/
+  border-width: 1px;
+  border-color: #F7EDE4;
+  background-color: #F7EDE4;
+}
+
+#attachments {
+  /*border-style: solid;*/
+  border-width: 1px;
+  border-color: #F7EDE4;
+  background-color: #F7EDE4;
+}
+
+#comments {
+  /*border-style: solid;*/
+  border-width: 1px;
+  border-color: #F7EDE4;
+  background-color: #F7EDE4;
+}
