--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,14 @@
 			<li><%= link_to "Home", root_path %></li>
 			<li>
 				<% if user_signed_in? %>
+						<%= link_to 'Profil', user_path(current_user) %>
+				<% end %>
+				</li>
+			<li>
+				<% if user_signed_in? %>
 						<%= link_to 'Sign out', destroy_user_session_path %>
 					<% else %>
-						<%= link_to 'Sign in', new_user_session_path %>
+						<%= link_to 'Sign in', new_user_session_path %> or <%= link_to 'sign up', new_user_registration_path %> 
 				<% end %>
 				</li>
 		</ul>
