--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -128,3 +128,10 @@ footer nav {
   border-color: #F7EDE4;
   background-color: #F7EDE4;
 }
+
+#wgrajplik {
+  /*border-style: solid;*/
+  border-width: 1px;
+  border-color: #F7EDE4;
+  background-color: #F7EDE4;
+}
