--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
   <!--p class="alert"><%= alert %></p-->
 
   <%= yield %>
+  <div class="navigationBar">
+    <%= link_to "Wstecz", :back %>
+  </div>
   </section>
   <%= render 'layouts/footer' %>
   <%= debug(params) if Rails.env.development? %>
