--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
   <!--%= javascript_include_tag :defaults %-->
   <%= javascript_include_tag 'rails', 'jquery', 'jquery-ui', 'application' %>
   <%= csrf_meta_tag %>
-    <%=render 'layouts/stylesheets' %>
+  <%=render 'layouts/stylesheets' %>
+  <%= ajaxful_rating_style %>
+  <%= ajaxful_rating_script %>
   <%= formtastic_stylesheet_link_tag %>
 </head>
 <body>
