--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,5 @@
 <header>
 	<!--a href="/"><h1>Tech Talks</h1></a-->
-	<%= link_to logo, root_path %>
 	<nav class="round">
 		<ul>
 			<li><%= link_to "Home", root_path %></li>
@@ -13,7 +12,9 @@
 				<% if user_signed_in? %>
 						<%= link_to 'Sign out', destroy_user_session_path %>
 					<% else %>
-						<%= link_to 'Sign in', new_user_session_path %> or <%= link_to 'sign up', new_user_registration_path %> 
+            <%= link_to 'Sign in', new_user_session_path %>
+            or
+            <%= link_to 'Sign up', new_user_registration_path %> 
 				<% end %>
 				</li>
 		</ul>
@@ -25,4 +26,5 @@
 		</ul>
 		<% end %>
 	</nav>
+	<%= link_to logo, root_path %>
 </header>
