--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>TechTalks</title>
   <!--%= javascript_include_tag :defaults %-->
-  <%= javascript_include_tag 'rails', 'jquery', 'jquery-ui', 'application' %>
+  <%= javascript_include_tag 'jquery', 'jquery-ui', 'application' %>
   <%= csrf_meta_tag %>
   <%=render 'layouts/stylesheets' %>
   <%= ajaxful_rating_style %>
