projekty i stopka poprawiane

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,13 @@
 <footer>
 	<nav class="round">
-		<ul>
-			<li><%= link_to "Sample1", 'http://news.railstutorial.org' %></li>
-			<li><%= link_to "Sample2", 'http://news.railstutorial.org' %></li>
-			<li><%= link_to "Sample3", 'http://news.railstutorial.org/' %></li>
-			<li><%= link_to "Sample4", 'http://www.railstutorial.org/' %></li>
+		<ul class="longspaces">
+			<li><%= link_to "Google prawde Ci powie", 'http://www.google.com/', :target => '_blank' %></li>
+			|
+			<li><%= link_to "Ruby", 'http://www.ruby-lang.org/', :target => '_blank' %></li>
+			|
+			<li><%= link_to "Rails", 'http://www.rubyonrails.org/', :target => '_blank' %></li>
+			|
+			<li><%= link_to "XKCD", 'www.rubyonrails.org/', :target => '_blank' %></li>
 		</ul>
 	</nav>
 </footer>
