--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>TechTalks</title>
   <!--%= javascript_include_tag :defaults %-->
   <%= javascript_include_tag 'jquery', 'jquery-ui', 'application' %>
+  <%= javascript_include_tag 'rails' %>
   <%= csrf_meta_tag %>
   <%=render 'layouts/stylesheets' %>
   <%= ajaxful_rating_style %>
