--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,3 @@
 <h2>New event</h2>
+<%= render :partial => "form" %>
 
-<%= semantic_form_for [@talk, @event] do |f| %>
-  <%= f.inputs do %>
-    <%= f.input :scheduled_at %>
-    <%= f.input :user %>
-  <% end %>
-  <%= f.buttons %>
-<% end %>
